added docker compose for production and development